# nostr-binding

./: .gitignore  Cargo.toml  Makefile  README.md  checksums.txt  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: canary-publish.yml  node.js.yml  publish.yml  rust.yml
app/nostr-mint/: offckb.config.ts  package-lock.json  package.json
app/nostr-mint/app/: entry.client.tsx
app/nostr-mint/app/conmponents/: asset-box.tsx  asset-button.tsx  connect-nostr.tsx  expandable.tsx  mint-button.tsx  unlock-button.tsx
app/nostr-mint/app/protocol/: ckb-helper.client.ts  content.ts  kind.ts  serialize.ts  tag.ts  util.ts
app/nostr-mint/app/routes/: _index.tsx
contracts/ckb-nostr-utils/: Cargo.toml  Makefile  README.md
contracts/ckb-nostr-utils/src/: error.rs  lib.rs
contracts/ckb-nostr-utils/src/event/: id.rs  mod.rs
contracts/ckb-nostr-utils/src/event/tag/: mod.rs
contracts/ckb-nostr-utils/src/key/: public_key.rs
contracts/nostr-binding/: Cargo.toml
contracts/nostr-binding/src/: config.rs  error.rs  main.rs  type_id.rs
contracts/nostr-lock/: Cargo.toml  README.md
contracts/nostr-lock/src/: blake2b.rs  config.rs  error.rs  main.rs  util.rs
deployment/mainnet/nostr-binding-type-script/: deployment.toml  step-1-gen-txs.sh  step-3-apply.sh
deployment/mainnet/nostr-binding-type-script/migrations/: 2024-07-18-010238.json
deployment/mainnet/nostr-lock-script/: deployment.toml  step-1-gen-txs.sh  step-2-sign.sh
deployment/mainnet/nostr-lock-script/migrations/: 2024-07-18-010412.json
deployment/nostr-binding-type-script/: deployment.toml  step-1-gen-txs.sh
deployment/nostr-lock-script/: deployment.toml  step-1-gen-txs.sh
deployment/nostr-lock-script/migrations/: 2024-07-03-014310.json
deployment/testnet/nostr-binding-type-script/: step-1-gen-txs.sh  step-2-sign.sh
deployment/testnet/nostr-binding-type-script/migrations/: 2024-07-03-012340.json  2024-07-03-014444.json
deployment/testnet/nostr-lock-script/: step-1-gen-txs.sh
docs/: nostr-binding-type-script.md  nostr-lock-script.md
scripts/: reproducible_build_docker
tests/: Cargo.toml
tests/src/: lib.rs  tests.rs  tests_both.rs  tests_lock.rs  tests_type.rs
(+6 files in other folders)
