[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/ckb-nostr-utils",
  "contracts/nostr-lock",
  "contracts/nostr-binding",
]

[profile.release]
overflow-checks = true
opt-level = 3
panic = 'abort'
strip = true
lto = true
