[package]
name = "ckb-nostr-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", default-features = false, features = ["alloc", "derive"]}
serde_json = { version = "1.0.117", default-features = false, features = ["alloc"]}
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.8", default-features = false }
k256 = { version = "=0.13.1", default-features = false, features = ["arithmetic", "schnorr", "alloc"] }
