[package]
name = "nostr-lock"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-hash = {version = "0.114.0", default-features = false, features = ["ckb-contract"] }
ckb-std = "0.15"
hex = { version = "0.4", default-features = false, features = ["alloc"]}
ckb-nostr-utils = { path = "../ckb-nostr-utils", version = "0.1.0" }

[build-dependencies]
ckb-gen-types = "0.114.0"
